# orange-hrm-playwright

./: pyproject.toml
.github/workflows/: ci.yml
data/: Employee.py
pages/: login_page.py  pim_page.py
pages/pim/: add_employee_page.py
tests/: conftest.py  manual_script.py  test_add_employee.py
tests/e2e/: test_add_employee.py  test_example.py
